--- a/index.html
+++ b/index.html
@@ -96,20 +96,21 @@
       <br />
 
         <div class="contactForm">
+          <h2 class="text-center bebas-neue-regular">Let Us Discuss Your Roof</h2>
           <div class="mb-3">
             <label for="" class="form-label">Name</label>
             <input type="text" name="" id="" class="form-control" placeholder="John Doe" aria-describedby="helpId" />
-            <small id="helpId" class="text-muted">Help text</small>
+            <!-- <small id="helpId" class="text-muted">Help text</small> -->
           </div>
           <div class="mb-3">
             <label for="" class="form-label">Contact Number</label>
             <input type="tel" name="" id="" class="form-control" placeholder="+44" aria-describedby="helpId" />
-            <small id="helpId" class="text-muted">Help text</small>
+            <!-- <small id="helpId" class="text-muted">Help text</small> -->
           </div>
           <div class="mb-3">
             <label for="" class="form-label">Email</label>
             <input type="email" name="" id="" class="form-control" placeholder="johndoe69@leakyhouse.sad" aria-describedby="helpId" />
-            <small id="helpId" class="text-muted">Help text</small>
+            <!-- <small id="helpId" class="text-muted">Help text</small> -->
           </div>
             <div class="mb-3">
               <label for="" class="form-label">Message</label>
