add some mock testimonial slides

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           <button type="button" class="btn btn-primary">Get a Quote Today!</button>
         </a>
       </div>
+    </div>
 
       <br />
 
@@ -140,12 +141,20 @@
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <img src="Assets/Media/Images/slide1.jpg" class="w-100 d-block" alt="First slide" />
+              <div class="carousel-caption">
+                <p>"My Home is very dry now"</p>
+              </div> 
             </div>
             <div class="carousel-item">
               <img src="Assets/Media/Images/slide2.jpg" class="w-100 d-block" alt="Second slide" />
+              <div class="carousel-caption">
+                <p>"I love my new roof, it is so cool"</p>
             </div>
+          </div>
             <div class="carousel-item">
               <img src="Assets/Media/Images/slide3.jpg" class="w-100 d-block" alt="Third slide" />
+              <div class="carousel-caption">
+                <p>"I can finally sleep at night knowing my roof is safe"</p>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
@@ -160,6 +169,22 @@
 
       </div>
     </div>
+  </div>
+
+
+
+     <footer class="text-center py-3">
+      <p>&copy; 2023 Your Company. All rights reserved.</p>
+      <p>Follow us on:
+        <a href="#" class=""><i class="fa-brands fa-facebook-f"></i></a> |
+        <a href="#" class=""><i class="fa-brands fa-x-twitter"></i></a> |
+      </p>
+      <script src=" script.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+
+      <script src="https://kit.fontawesome.com/9c42ee97f6.js" crossorigin="anonymous"></script>
 
     <a href="tel:1234567890" class="call-now-button">
       <svg height="50px" width="50px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg"
@@ -181,19 +206,7 @@
     </a>
 
 
-
-    <footer class="text-center py-3">
-      <p>&copy; 2023 Your Company. All rights reserved.</p>
-      <p>Follow us on:
-        <a href="#" class="">Facebook</a> |
-        <a href="#" class="">Twitter</a> |
-      </p>
-      <script src=" script.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-
-      <script src="https://kit.fontawesome.com/9c42ee97f6.js" crossorigin="anonymous"></script>
+   
 </body>
 
 </html>
